# SolverShell

./: .gitignore  CMakeLists.txt  README.md
examples/3DShapeGenerator/: CMakeLists.txt  api.cpp  api.h  main.cpp  randomization.cpp  randomization.h  shapes.cpp  shapes.h  sosh.cpp  writefile.cpp  writefile.h
examples/Equation/: CMakeLists.txt  Equation.cpp  Equation.h  sosh.cpp
examples/SimpleExample/: CMakeLists.txt  sosh.cpp
src/: CMakeLists.txt  main.cpp
src/SOSH/: API.h  SOSH_AST.cpp  SOSH_AST.h  SOSH_Function.h  SOSH_Interpreter.cpp  SOSH_Interpreter.h  SOSH_Lexer.cpp  SOSH_Lexer.h  SOSH_Manager.cpp  SOSH_Manager.h  SOSH_Parser.cpp  SOSH_Parser.h  SOSH_Shell.cpp  SOSH_Shell.h  SOSH_Token.cpp  SOSH_Token.h
test/: CMakeLists.txt  SOSH_AST_Tests.cpp  SOSH_Function_Tests.cpp  SOSH_Lexer_Tests.cpp  SOSH_Manager_Tests.cpp  SOSH_Parser_Tests.cpp  SOSH_Shell_Tests.cpp  SOSH_Token_Tests.cpp
