#set(CMAKE_CXX_FLAGS -Wno-non-pod-varargs)
set(BINARY ${CMAKE_PROJECT_NAME})
add_executable(${BINARY}_run 
    main.cpp
	SOSH/API.h
	SOSH/SOSH_AST.cpp
    SOSH/SOSH_AST.h
    SOSH/SOSH_Function.h 
    SOSH/SOSH_Interpreter.cpp
    SOSH/SOSH_Interpreter.h
    SOSH/SOSH_Lexer.cpp
    SOSH/SOSH_Lexer.h
    SOSH/SOSH_Manager.cpp 
    SOSH/SOSH_Manager.h 
    SOSH/SOSH_Parser.cpp 
    SOSH/SOSH_Parser.h 
    SOSH/SOSH_Shell.cpp 
    SOSH/SOSH_Shell.h 
    SOSH/SOSH_Token.cpp 
    SOSH/SOSH_Token.h)
add_library(${BINARY}_lib STATIC 
    SOSH/API.h
	SOSH/SOSH_AST.cpp
    SOSH/SOSH_AST.h
    SOSH/SOSH_Function.h 
    SOSH/SOSH_Interpreter.cpp
    SOSH/SOSH_Interpreter.h
    SOSH/SOSH_Lexer.cpp
    SOSH/SOSH_Lexer.h
    SOSH/SOSH_Manager.cpp 
    SOSH/SOSH_Manager.h 
    SOSH/SOSH_Parser.cpp 
    SOSH/SOSH_Parser.h 
    SOSH/SOSH_Shell.cpp 
    SOSH/SOSH_Shell.h 
    SOSH/SOSH_Token.cpp 
    SOSH/SOSH_Token.h)
add_library(${BINARY}_SharedLib SHARED 
    SOSH/API.h
	SOSH/SOSH_AST.cpp
    SOSH/SOSH_AST.h
    SOSH/SOSH_Function.h 
    SOSH/SOSH_Interpreter.cpp
    SOSH/SOSH_Interpreter.h
    SOSH/SOSH_Lexer.cpp
    SOSH/SOSH_Lexer.h
    SOSH/SOSH_Manager.cpp 
    SOSH/SOSH_Manager.h 
    SOSH/SOSH_Parser.cpp 
    SOSH/SOSH_Parser.h 
    SOSH/SOSH_Shell.cpp 
    SOSH/SOSH_Shell.h 
    SOSH/SOSH_Token.cpp 
    SOSH/SOSH_Token.h)
